--- a/backend/common/package.json
+++ b/backend/common/package.json
@@ -1,1 +1,1 @@
-{"name":"common","version":"1.0.0","description":"","main":"index.js","dependencies":{"bcryptjs":"^2.4.3","jsonwebtoken":"^9.0.2","mongoose":"^8.0.4"},"type":"module"}
+{"name":"common","version":"1.0.0","description":"","main":"index.js","dependencies":{"axios":"^1.6.5","bcryptjs":"^2.4.3","jsonwebtoken":"^9.0.2","mongoose":"^8.0.4"},"type":"module"}
